--- a/dev_club_flutter_assignment/pubspec.yaml
+++ b/dev_club_flutter_assignment/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   sensors: ^0.4.1+5
+  url_launcher: ^5.4.1
 
 dev_dependencies:
   flutter_test:
